--- a/app.ini
+++ b/app.ini
@@ -16,7 +16,7 @@ APP_DATA_PATH    = /data/gitea
 DOMAIN           = localhost
 SSH_DOMAIN       = localhost
 HTTP_PORT        = 3000
-ROOT_URL         = http://localhost:3000/
+ROOT_URL         = http://172.29.5.18:3000/
 DISABLE_SSH      = false
 SSH_PORT         = 22
 SSH_LISTEN_PORT  = 22
@@ -54,7 +54,7 @@ ENABLE_FEDERATED_AVATAR       = true
 PATH = /data/gitea/attachments
 
 [log]
-MODE      = console
+MODE      = file
 LEVEL     = info
 ROUTER    = console
 ROOT_PATH = /data/gitea/log
@@ -88,3 +88,8 @@ ENABLE_OPENID_SIGNUP = true
 
 [migrations]
 ALLOW_LOCALNETWORKS = true
+
+[oauth2_client]
+ENABLE_AUTO_REGISTRATION = true
+USERNAME = nickname
+ACCOUNT_LINKING = login
