--- a/app.ini
+++ b/app.ini
@@ -47,7 +47,7 @@ PROVIDER        = file
 [picture]
 AVATAR_UPLOAD_PATH            = /data/gitea/avatars
 REPOSITORY_AVATAR_UPLOAD_PATH = /data/gitea/repo-avatars
-DISABLE_GRAVATAR              = false
+DISABLE_GRAVATAR              = true
 ENABLE_FEDERATED_AVATAR       = true
 
 [attachment]
