打开代码搜索功能
启用gitea的代码搜索功能，使用bleve引擎

--- a/app.ini
+++ b/app.ini
@@ -93,3 +93,8 @@ ALLOW_LOCALNETWORKS = true
 ENABLE_AUTO_REGISTRATION = true
 USERNAME = nickname
 ACCOUNT_LINKING = login
+
+[indexer]
+REPO_INDEXER_ENABLED = true
+REPO_INDEXER_TYPE = bleve
+ISSUE_INDEXER_TYPE = bleve
